<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="button">Button</string>
    <string name="loginSystem">XXX登录系统</string>
    <string name="login">登录</string>
    <string name="inputUsername">请输入您的账号</string>
    <string name="inputPassword">请输入你的密码</string>
    <string name="welcome">Welcome</string>
    <string name="register">注册</string>
    <string name="secondPassword">请再输入一次密码:</string>
    <string name="back">返回</string>
    <string name="rememberPassword">记住密码</string>
    <string name="autoLogin">自动登录</string>
    <string name="logout">退出登录</string>
</resources>