<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/tv_main_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/til_main_username"
        android:text="@string/loginSystem"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.33" />

    <Button
        android:id="@+id/btn_main_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:text="@string/login"
        android:background="@drawable/selector_btn"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/cb_main_autoLogin"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="@+id/cb_main_rememberPassword"
        app:layout_constraintTop_toBottomOf="@+id/til_main_password"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btn_main_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/register"
        android:background="@drawable/selector_btn"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/btn_main_login"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/btn_main_login"
        app:layout_constraintTop_toBottomOf="@+id/btn_main_login"
        tools:visibility="visible" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_main_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/tv_main_title"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="@+id/tv_main_title"
        app:layout_constraintTop_toBottomOf="@+id/tv_main_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_main_username"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_above="@id/et_main_password"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:hint="@string/inputUsername"
            android:inputType="number"
            android:lines="1"
            android:maxLines="1"
            app:drawableStartCompat="@drawable/ic_baseline_username"
            app:layout_constraintEnd_toEndOf="@+id/tv_main_title"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="@+id/tv_main_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_main_title" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_main_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/til_main_username"
        app:layout_constraintStart_toStartOf="@+id/til_main_username"
        app:layout_constraintTop_toBottomOf="@+id/til_main_username"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_main_password"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_main_title"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="30dp"
            android:hint="@string/inputPassword"
            android:inputType="textPassword"
            android:lines="1"
            android:maxLines="1"
            app:drawableStartCompat="@drawable/ic_baseline_passport"
            app:layout_constraintEnd_toEndOf="@+id/et_main_username"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/et_main_username"
            app:layout_constraintTop_toBottomOf="@+id/et_main_username" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/iv_main_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/tv_main_title"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:src="@drawable/mk_ic_wz_zy"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/tv_main_title"
        app:layout_constraintEnd_toEndOf="@+id/tv_main_title"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toStartOf="@+id/tv_main_title" />

    <CheckBox
        android:id="@+id/cb_main_rememberPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="44dp"
        android:text="@string/rememberPassword"
        app:layout_constraintBottom_toTopOf="@+id/btn_main_login"
        app:layout_constraintEnd_toStartOf="@+id/cb_main_autoLogin"
        app:layout_constraintHorizontal_bias="0.677"
        app:layout_constraintStart_toStartOf="@+id/til_main_password" />

    <CheckBox
        android:id="@+id/cb_main_autoLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="44dp"
        android:text="@string/autoLogin"
        app:layout_constraintBottom_toTopOf="@+id/btn_main_login"
        app:layout_constraintEnd_toEndOf="@+id/til_main_password" />

</androidx.constraintlayout.widget.ConstraintLayout>