<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="300dp"
    android:layout_gravity="center"
    >


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:counterEnabled="true"
        app:counterMaxLength="10">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_main_register_username"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/inputUsername"
            android:inputType="number"
            android:lines="1"
            android:maxLines="1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_firstPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="12">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_main_register_firstPassword"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/inputPassword"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_secondPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            app:counterEnabled="true"
            app:counterMaxLength="12">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_main_register_secondPassword"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/secondPassword"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLines="1" />

        </com.google.android.material.textfield.TextInputLayout>

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>